--- a/src/browser/app/editor/editor.component.html
+++ b/src/browser/app/editor/editor.component.html
@@ -128,23 +128,31 @@
                         [matAutocomplete]="tagSuggest"
                     /><mat-autocomplete #tagSuggest="matAutocomplete" (optionSelected)="$event.option.value.navigate()">
                         <mat-option *ngFor="let option of tagSuggests | async" [value]="option">
-                            <span class="hint-tag" [class]="[option.master ? 'hint-slaved' : 'hint-master']">
-                                <span class="hint-namespace">{{ option.namespace }}: </span>
-                                <span
-                                    class="hint-raw"
-                                    [innerHTML]="option.raw | mark: value('raw').trim():false"
-                                ></span>
-                            </span>
-                            <span *ngIf="option.master">
-                                ➜
-                                <span class="hint-tag hint-master">
-                                    <span class="hint-namespace">{{ option.master!.namespace }}:</span>
-                                    <span
-                                        class="hint-raw"
-                                        [innerHTML]="option.master!.raw | mark: value('raw').trim():false"
-                                    ></span
-                                ></span>
-                            </span>
+                            <div class="hint">
+                                <span class="hint-original">
+                                    <span class="hint-tag" [class]="[option.isSlaved ? 'hint-slaved' : 'hint-master']">
+                                        <span class="hint-namespace">{{ option.suggest.namespace }}: </span>
+                                        <span
+                                            class="hint-raw"
+                                            [innerHTML]="option.suggest.raw | mark: value('raw').trim():false"
+                                        ></span>
+                                    </span>
+                                    <span *ngIf="option.isSlaved">
+                                        ➜
+                                        <span class="hint-tag hint-master">
+                                            <span class="hint-namespace">{{ option.master.namespace }}:</span>
+                                            <span
+                                                class="hint-raw"
+                                                [innerHTML]="option.master.raw | mark: value('raw').trim():false"
+                                            ></span
+                                        ></span>
+                                    </span>
+                                </span>
+                                <span *ngIf="option.translation() | async" class="hint-translation">
+                                    <span class="hint-namespace">{{ (getNamespace(option.master.namespace) | async).name }}</span
+                                    >：<span [innerHTML]="(option.translation() | async)?.name"></span>
+                                </span>
+                            </div>
                         </mat-option>
                     </mat-autocomplete>
                     <mat-hint>{{ enabled('raw') ? '输入原始的标签内容' : '修改标签时无法更改此项' }}</mat-hint>
