--- a/src/browser/app/editor/editor.component.sass
+++ b/src/browser/app/editor/editor.component.sass
@@ -82,6 +82,7 @@ button, mat-card-subtitle
     overflow: hidden
     text-overflow: ellipsis
 mat-option .hint
+  user-select: none
   display: flex
   flex-direction: column
   line-height: 1.5em
