--- a/src/browser/app/github-corner/github-corner.component.scss
+++ b/src/browser/app/github-corner/github-corner.component.scss
@@ -1,6 +1,6 @@
 :host {
   width: 48px;
-};
+}
 
 $size: 80px;
 
@@ -35,7 +35,7 @@ svg {
 
   :host {
     width: 40px;
-  };
+  }
 
   $size: 64px;
 
@@ -46,15 +46,18 @@ svg {
 }
 
 @keyframes octocat-wave {
-  0%, 100% {
+  0%,
+  100% {
     transform: rotate(0);
   }
 
-  20%, 60% {
+  20%,
+  60% {
     transform: rotate(-25deg);
   }
 
-  40%, 80% {
+  40%,
+  80% {
     transform: rotate(10deg);
   }
 }
