--- a/src/browser/app/list/list.component.scss
+++ b/src/browser/app/list/list.component.scss
@@ -12,7 +12,7 @@
   }
 
   &.show-img-no-r18g ::ng-deep {
-    img[ehimg][nsfw=\"R18G\"] {
+    img[ehimg][nsfw="R18G"] {
       filter: blur(10px);
       transform: scale(0.9);
     }
