feat: source check

--- a/src/browser/app/editor/editor.component.html
+++ b/src/browser/app/editor/editor.component.html
@@ -93,7 +93,7 @@
                 <button mat-menu-item (click)="searchExternal('https://zh.wikipedia.org/w/index.php?search=%raw')">
                   <span>在维基百科搜索标签</span>
                 </button>
-                <button mat-menu-item (click)="searchExternal('https://zh.moegirl.org/index.php?search=%raw')">
+                <button mat-menu-item (click)="searchExternal('https://zh.moegirl.org.cn/index.php?search=%raw')">
                   <span>在萌娘百科搜索标签</span>
                 </button>
               </ng-template>
@@ -164,7 +164,7 @@
                 <button mat-menu-item (click)="searchExternal('https://zh.wikipedia.org/w/index.php?search=%name')">
                   <span>在维基百科搜索名称</span>
                 </button>
-                <button mat-menu-item (click)="searchExternal('https://zh.moegirl.org/index.php?search=%name')">
+                <button mat-menu-item (click)="searchExternal('https://zh.moegirl.org.cn/index.php?search=%name')">
                   <span>在萌娘百科搜索名称</span>
                 </button>
               </ng-template>
